--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body class="bg-white">
     <header>
       <div
-        class="p-8 lg:py-12 max-w-screen-lg mx-auto flex justify-between items-center"
+        class="p-8 lg:py-12 max-w-screen-xl mx-auto flex justify-between items-center"
       >
         <a href="./">
           <img
@@ -36,12 +36,12 @@
       </div>
     </header>
 
-    <main class="p-8 max-w-screen-lg mx-auto my-10">
+    <main class="p-8 max-w-screen-xl mx-auto my-10">
       <h1 class="text-2xl">agência digital.<br />design. tecnologia. arte.</h1>
     </main>
 
     <section
-      class="p-8 md:flex md:items-center md:justify-center max-w-screen-lg mx-auto my-10"
+      class="p-8 md:flex md:items-center md:justify-center max-w-screen-xl mx-auto my-10"
     >
       <img
         class="md:hidden"
@@ -55,7 +55,7 @@
       />
     </section>
 
-    <section class="p-8 max-w-screen-lg mx-auto mt-10">
+    <section class="p-8 max-w-screen-xl mx-auto mt-10">
       <div class="md:grid grid-cols-3">
         <h1 class="text-2xl md:text-xl md:mb-0 mb-4 font-bold">
           Quem somos?
@@ -69,7 +69,7 @@
       </div>
     </section>
 
-    <section class="flex justify-center p-8 max-w-screen-lg mx-auto mb-20">
+    <section class="flex justify-center p-8 max-w-screen-xl mx-auto mb-20">
       <img
         class="lg:max-w-2xl"
         src="./src/assets/images/company/mockup-sichelero.png"
@@ -77,7 +77,7 @@
       />
     </section>
 
-    <section class="p-8 max-w-screen-lg mx-auto mt-10">
+    <section class="p-8 max-w-screen-xl mx-auto mt-10">
       <div class="grid grid-cols-1 md:grid-cols-3 md:mb-12">
         <h1 class="text-2xl md:text-xl md:mr-32 mb-4 font-bold">
           O que fazemos?
@@ -113,7 +113,7 @@
       </div>
     </section>
 
-    <section class="p-8 max-w-screen-lg flex justify-center mx-auto my-10">
+    <section class="p-8 max-w-screen-xl flex justify-center mx-auto my-10">
       <img
         class="md:hidden"
         src="./src/assets/images/company/mockup-chegou-2.png"
@@ -126,7 +126,7 @@
       />
     </section>
 
-    <section class="p-8 max-w-screen-lg mx-auto my-10">
+    <section class="p-8 max-w-screen-xl mx-auto my-10">
       <div class="grid grid-cols-1 md:grid-cols-3 md:mb-12">
         <h1 class="text-2xl md:text-xl md:mr-32 mb-4 md:mb-0 font-bold">
           O que nos inspira?
@@ -151,7 +151,7 @@
       </div>
     </section>
 
-    <footer class="p-8 max-w-screen-lg mx-auto md:grid grid-cols-2">
+    <footer class="p-8 max-w-screen-xl mx-auto md:grid grid-cols-2">
       <div>
         <h1 class="mb-10 font-bold text-4xl md:text-xl">
           Vamos criar algo incrível juntos?
